# ctrader_rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs
src/: builder.rs  continue_bar.rs  credentials.rs  error.rs  lib.rs
src/api/: account.rs  application.rs  market_data.rs  mod.rs
src/client/: account.rs  auth.rs  event.rs  historical.rs  margin.rs  marketdata.rs  misc.rs  mod.rs  order.rs  position.rs  symbol.rs
src/doc/: api.md
src/grpc/: dtc.proto  market_data.proto
src/grpc/marketcetera/: marketcetera.proto  rpc_base.proto  rpc_marketdata_types.proto  rpc_paging.proto  rpc_pnl.proto  rpc_pnl_types.proto  rpc_trade.proto  rpc_trade_types.proto
src/io/: cm.rs  codec.rs  connection.rs  io_task.rs  mod.rs  options.rs  processor.rs  ratelimit.rs  types.rs
src/protos/: convert.rs  display.rs  mod.rs
src/util/: bar_gen.rs  conv.rs  download.rs  mod.rs  session_config.rs  symbol_info.rs  symbol_store.rs  time_util.rs
